[gd_scene load_steps=12 format=2]

[ext_resource path="res://Lexical/Dict/dict-background.png" type="Texture" id=1]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Test/SentenceCarousel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Test/TestSoundPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Lexical/Tones/TonesDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/pressFtoExit.tscn" type="PackedScene" id=6]
[ext_resource path="res://Lexical/WordPage/WordPage.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="WordPage" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 161.04, 94.6192 )
scale = Vector2( 0.24626, 0.572152 )
texture = ExtResource( 1 )

[node name="Thai" type="Label" parent="."]
margin_left = 57.0446
margin_top = 16.1076
margin_right = 228.045
margin_bottom = 65.1076
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "การคิดเชิงอนาคต"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="English" type="Label" parent="."]
margin_left = 58.7136
margin_top = 49.5387
margin_right = 263.714
margin_bottom = 71.5387
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(prefix converting verbs into nouns)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestSoundPlayer" parent="." instance=ExtResource( 4 )]
position = Vector2( 38.738, 39.3117 )
scale = Vector2( 0.2, 0.2 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.2845
margin_top = -87.7378
margin_right = 87.7155
margin_bottom = -59.7378
custom_fonts/font = SubResource( 3 )
text = "Show sentences with that word"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToneDisplay" parent="." instance=ExtResource( 5 )]
position = Vector2( 59.4534, 70.2631 )

[node name="PressFtoExit" parent="." instance=ExtResource( 6 )]

[node name="SentenceCarousel" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 154.415, 109.9 )

[node name="OkButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0894
margin_top = -42.1113
margin_right = 27.9106
margin_bottom = -14.1113
custom_fonts/font = SubResource( 4 )
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="OkButton" to="." method="_on_OkButton_pressed"]
